--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,31 @@
 /* You can add global styles to this file, and also import other style files */
+@import "assets/scss/_variables";
+@import "assets/scss/_mixins";
+
+html{
+  font-size: 62.5%;
+  box-sizing: border-box;
+}
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
+}
+
+body{
+  font-family: $font-main;
+  font-size: 1.6rem;
+}
+
+h1{
+  @include h1
+}
+
+h2{
+  @include h2
+}
+
+h3{
+  @include h3-1
+}
