button component & icon component

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,17 +1,18 @@
 $color-bg-dark: #141625;
 $color-bg-light: #F8F8F8;
-$color-button-action: #7C5DFA;
-$color-hover-button-action: #9277FF;
-$color-button-delete:#EC5757;
-$color-hover-button-delete: #FF9797;
-$color-button-edit:#DFE3FA;
-$color-hover-button-edit:#F9FAFE;
-$color-text-gray-2: #7E88C3;
-$color-dark-button:#0C0E16;
-$color-dark-button-2: #252945;
-$color-hover-dark-button:#1E2139;
+$color-button-purple: #7C5DFA;
+$color-hover-button-purple: #9277FF;
+$color-button-red:#EC5757;
+$color-hover-button-red: #FF9797;
+$color-button-gray-1:#F9FAFE;
+$color-button-gray-2:#DFE3FA;
+$color-gray-blue: #7E88C3;
+$color-dark-1: #373B53;
+$color-dark-2: #252945;
+$color-dark-3:#1E2139;
+$color-dark-4:#0C0E16;
 $color-text-white: #FFFFFF;
 $color-paid: #33D69F;
 $color-pending: #FF8F00;
 
-$font-main: "League Spartan', sans-serif";
+$font-main: 'League Spartan', sans-serif;
