--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,7 +10,6 @@ html{
 *{
   margin: 0;
   padding: 0;
-  box-sizing: inherit;
 }
 
 body{
@@ -19,7 +18,7 @@ body{
 }
 
 h1{
-  @include h1
+  @include h1;
 }
 
 h2{
