--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -16,3 +16,5 @@ $color-paid: #33D69F;
 $color-pending: #FF8F00;
 
 $font-main: 'League Spartan', sans-serif;
+
+$box-shadow-dropdown: 0 10px 20px 0 rgba(0,0,0,0.25)
