--- a/src/app/shared/components/icon/icon.component.scss
+++ b/src/app/shared/components/icon/icon.component.scss
@@ -5,6 +5,14 @@
   display: flex;
   align-items: center;
 
+  &--dropdown{
+    position: absolute;
+    top: 50%;
+    right: 0;
+    transform: translate(-1rem, -50%);
+    cursor: pointer;
+  }
+
   &--rounded{
     display: flex;
     justify-content: center;
@@ -23,9 +31,16 @@
     width: .7rem;
     height: .7rem;
     fill: $color-button-purple;
+    transition: all .2s;
 
     &--gray-blue {
       fill: $color-gray-blue;
+    }
+
+    &--dropdown{
+      width: 1.5rem;
+      height: 1.5rem;
+      transform: rotate(180deg);
     }
   }
 }
