--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
-<h1>ROOT APP</h1>
-<div class="box">
-  
-</div>
+<app-sidebar>
+  <app-logo></app-logo>
+  <app-avatar></app-avatar>
+</app-sidebar>
+
