update shared module

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -4,8 +4,9 @@ $color-button-purple: #7C5DFA;
 $color-hover-button-purple: #9277FF;
 $color-button-red:#EC5757;
 $color-hover-button-red: #FF9797;
-$color-button-gray-1:#F9FAFE;
-$color-button-gray-2:#DFE3FA;
+$color-gray-1:#F9FAFE;
+$color-gray-2:#DFE3FA;
+$color-gray-3: #888EB0;
 $color-gray-blue: #7E88C3;
 $color-dark-1: #373B53;
 $color-dark-2: #252945;
