refactor components dropdown & form group

--- a/src/app/shared/components/button/button.component.html
+++ b/src/app/shared/components/button/button.component.html
@@ -1,4 +1,4 @@
-<button class="button" [ngClass]="buttonClass" C>
+<button class="button" [ngClass]="buttonClass">
   <ng-content></ng-content>
   {{text}}
 </button>
