--- a/src/app/shared/components/dropdown/dropdown.component.scss
+++ b/src/app/shared/components/dropdown/dropdown.component.scss
@@ -1,9 +1,12 @@
-@import "src/assets/scss/_variables";
+@import "../../../../assets/scss/variables";
 
 .dropdown{
   box-shadow:$box-shadow-dropdown;
   margin-top: 1rem;
   border-radius: .8rem;
+  position: absolute;
+  top: 100%;
+  width: 100%;
 
   &__item{
     padding: 1.7rem 2rem;
@@ -18,7 +21,7 @@
     }
 
     &:not(:last-child){
-      border-bottom: solid 1px $color-button-gray-2;
+      border-bottom: solid 1px $color-gray-2;
     }
   }
 }
