--- a/src/app/shared/components/form-group/form-group.component.scss
+++ b/src/app/shared/components/form-group/form-group.component.scss
@@ -1,9 +1,25 @@
-@import "src/assets/scss/_variables";
+@import "../../../../assets/scss/variables";
 
 .form-group{
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  position: relative;
+
+  &--filter{
+
+    margin-right: 1rem;
+    & input{
+      border: none;
+      background-color: transparent;
+      width: 10rem;
+    }
+
+    & svg{
+      width: 1.2rem;
+      height: 1.2rem;
+    }
+  }
 
   &__label{
     font-size: 1.2rem;
@@ -29,14 +45,13 @@
   }
 
   &__input{
-    padding-left: 2rem;
     font-size: 1.2rem;
     line-height: 1.5rem;
     letter-spacing: .25px;
     font-weight: 700;
     font-family: inherit;
     border-radius: .4rem;
-    border: solid 1px $color-button-gray-2;
+    border: solid 1px $color-gray-2;
     padding: 2rem 1.6rem;
     cursor: pointer;
 
