invoice list & invoice card

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,10 @@
-<app-sidebar>
-  <app-logo></app-logo>
-  <app-avatar></app-avatar>
-</app-sidebar>
+<div class="app">
+  <app-sidebar>
+    <app-logo></app-logo>
+    <app-avatar></app-avatar>
+  </app-sidebar>
+  <section class="app__main">
+    <router-outlet></router-outlet>
+  </section>
+</div>
 
