--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,5 +6,6 @@
   <section class="app__main">
     <router-outlet></router-outlet>
   </section>
+  <app-modal *ngIf="modalIsOpen"></app-modal>
 </div>
 
